feat(menu): common menu items

--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -210,5 +210,10 @@
         "drop_field": "ここにフィールドをドロップ",
         "confirm": "確認",
         "cancel": "キャンセル"
+    },
+    "field_menu": {
+        "to_dim": "ディメンションに変更",
+        "to_mea": "メジャーに変更",
+        "new_calc": "計算フィールドを作成"
     }
 }
