--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -215,6 +215,19 @@
     "field_menu": {
         "to_dim": "移动到维度",
         "to_mea": "移动到度量",
-        "new_calc": "新的计算字段"
+        "new_calc": "新的计算字段",
+        "drill": {
+            "name": "钻取",
+            "levels": {
+                "year": "年",
+                "quarter": "季度",
+                "month": "月",
+                "week": "周",
+                "day": "日",
+                "hour": "时",
+                "minute": "分",
+                "second": "秒"
+            }
+        }
     }
 }
