feat: leaflet geojson support (#94)
* feat: leaflet geojson support

* feat(map): scale support

* feat: coord system

* fix: missing marks on container resize

This commit resolves a bug where map markers were not being rendered correctly when the map container was resized. This was achieved by invoking the 'invalidateSize' method on the map instance whenever the container size changed.

* feat: choropleth renderer

* feat: geojson config

* feat(geojson): support gw props

* feat: topojson support

* feat: specify topojson object key for generating geojson

* fix(geo): displayed aggr prefix of dimsensions by mistake

* feat(geo): sync vega format settings

* feat(leaflet): auto adjust default size

* feat(leaflet): new config scaleIncludeUnmatchedChoropleth

* fix: provide value for missing field in encoding

* fix: hide export when is map

---------

Co-authored-by: islxyqwe <islxyqwe123@gmail.com>

--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -39,7 +39,14 @@
             "arc": "アーク",
             "boxplot": "ボックスプロット",
             "table": "表",
-            "text": "本文"
+            "text": "テキスト",
+            "poi": "POI",
+            "choropleth": "コロプレス"
+        },
+        "coord_system": {
+            "__enum__": "座標系",
+            "generic": "ジェネリック",
+            "geographic": "地理"
         },
         "stack_mode": {
             "__enum__": "スタックモード",
@@ -76,7 +83,10 @@
             "theta": "角度",
             "radius": "半径",
             "filters": "フィルター",
-            "text": "本文"
+            "text": "本文",
+            "longitude": "経度",
+            "latitude": "緯度",
+            "geoId": "地理ID"
         },
         "aggregator": {
             "sum": "合計",
@@ -167,6 +177,18 @@
                 "size_setting": {
                     "width": "幅",
                     "height": "高さ"
+                },
+                "geography": "地理情報設定",
+                "geography_settings": {
+                    "geoKey": "フィーチャーID",
+                    "format": "データ形式",
+                    "geojson": "GeoJSON",
+                    "topojson": "TopoJSON",
+                    "objectKey": "Feature のキー",
+                    "jsonInputPlaceholder": "{{format}}をここに貼り付けてください",
+                    "href": "{{format}} URL",
+                    "hrefPlaceholder": "{{format}} URLを入力",
+                    "load": "ロード"
                 }
             },
             "DatasetFields": {
