Feat: collapsible table header (#86)
* fix: duplicated key in table headers

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* feat: collapsible table header

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* fix: ensure `key` property of header node is string

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* fix: support number & string in header key

- revert bug in commit 5a2a5174
- specify the type of header key as `string | number`
- make the header children sorting support string & number and more efficient

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* fix: code style issues

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* fix: code style issues

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* feat: show table summary

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* refactor: share more data between pivot table and renderer

it's to avoid workers filtering and transforming same data multiple times in renderer and pivot table components

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* put pivot table building to web worker, avoid using main thread

Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

* fix loading layer on table

* wrap MetricTable with React.memo

make MetricTable only change when the matrix in the props has changed to avoid repeated update

* refactor renderer to cache transformed data for pivot table

* refactor: only build table when aggData is updated

* feat: pivot table dark mode

* fix: loading status in pivot table

* fix: pivot table get computation func from props

* fix: decouple aggregate and generate table

* fix: table body color in light & dark mode

---------

Co-authored-by: yyubruce <33870780+bruceshark@users.noreply.github.com>
Co-

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -179,6 +179,9 @@
                     "width": "Width",
                     "height": "Height"
                 },
+                "table": {
+                    "summary": "Show summary"
+                },
                 "geography": "Geography Configuration",
                 "geography_settings": {
                     "geoKey": "Feature ID",
