--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -140,7 +140,8 @@
         "tablist": {
             "new": "+ 新建",
             "auto_title": "图表 {{idx}}",
-            "chart_name": "图表名称"
+            "chart_name": "图表名称",
+            "remove_confirm": "你确定要删除这个图表吗？"
         },
         "tabpanel": {
             "menubar": {
