--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -10,6 +10,7 @@
         "x": "x-Axis",
         "y": "y-Axis",
         "zeroScale": "Zero Scale",
+        "misc": "Misc",
         "formatGuidesDocs": "Format guides docs",
         "readHere": "read here"
     },
