--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -12,7 +12,8 @@
         "zeroScale": "Zero Scale",
         "misc": "Misc",
         "formatGuidesDocs": "Format guides docs",
-        "readHere": "read here"
+        "readHere": "read here",
+        "svg": "Use SVG"
     },
     "constant": {
         "row_count": "Row count",
