--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -12,7 +12,8 @@
         "zeroScale": "零刻度",
         "misc": "其他",
         "formatGuidesDocs": "格式指南",
-        "readHere": "阅读此处"
+        "readHere": "阅读此处",
+        "svg": "使用SVG"
     },
     "constant": {
         "row_count": "行数",
