feat: drop zone

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -191,7 +191,7 @@
                     "geojson": "GeoJSON",
                     "topojson": "TopoJSON",
                     "objectKey": "Extract Feature Key",
-                    "jsonInputPlaceholder": "Paste {{format}} here",
+                    "jsonInputPlaceholder": "Drop {{format}} file here",
                     "href": "{{format}} URL",
                     "hrefPlaceholder": "Enter {{format}} URL",
                     "load": "Load"
