--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -171,9 +171,11 @@
                     "ascending": "Sort in Ascending Order",
                     "descending": "Sort in Descending Order",
                     "transpose": "Transpose",
+                    "config": "Config",
                     "export_chart": "Export",
                     "export_chart_as": "Export as {{type}}",
-                    "export_code": "Export Code"
+                    "export_code": "Export Code",
+                    "geojson": "Geography Configuration"
                 },
                 "limit": "Limit",
                 "size": "Resize",
@@ -194,7 +196,8 @@
                     "jsonInputPlaceholder": "Drop {{format}} file here",
                     "href": "{{format}} URL",
                     "hrefPlaceholder": "Enter {{format}} URL",
-                    "load": "Load"
+                    "load": "Load",
+                    "loading": "Loading Geographic Data..."
                 }
             },
             "DatasetFields": {
@@ -253,8 +256,13 @@
         "to_dim": "Move to dimensions",
         "to_mea": "Move to measures",
         "new_calc": "New calculation",
+        "bin": "Bin",
+        "binCount": "Bin Count",
+        "log": "Log{{ base }}",
+        "binCustom": "Bin(customize)",
+        "logCustom": "Log(customize)",
         "drill": {
-            "name": "Drill down / up",
+            "name": "Time Unit",
             "levels": {
                 "year": "Year",
                 "quarter": "Quarter",
@@ -266,5 +274,15 @@
                 "second": "Second"
             }
         }
+    },
+    "calc": {
+        "bin_panel_title": "Bins",
+        "bin_panel_desc": "Set bin config for field",
+        "bin_panel_option_widths": "Bin with equal widths",
+        "bin_panel_option_counts": "Bin with equal counts",
+        "bin_panel_number": "Bin number",
+        "log_panel_title": "Logarithm Transformation",
+        "log_panel_desc": "Set log config for field",
+        "log_panel_number": "Logarithmic base"
     }
 }
