--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -1,5 +1,13 @@
 {
     "config": {
+        "scheme": "方案",
+        "primary_color": "主要颜色",
+        "color_palette": "调色板",
+        "opacity": "不透明度",
+        "size": "尺寸",
+        "min_domain": "最小域值",
+        "max_domain": "最大域值",
+        "range": "范围",
         "format": "格式",
         "numberFormat": "数字格式",
         "timeFormat": "时间格式",
