--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -25,6 +25,8 @@
     },
     "constant": {
         "row_count": "Row count",
+        "mea_key": "Measure names",
+        "mea_val": "Measure values",
         "analytic_type": {
             "dimension": "dimension",
             "measure": "measure"
