--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -4,6 +4,7 @@
         "primary_color": "Primary Color",
         "color_palette": "Color Palette",
         "opacity": "Opacity",
+        "default_color_palette": "Default",
         "size":"Size",
         "min_domain": "Domain Min",
         "max_domain": "Domain Max",
