Refactor: split dataSource from graphic walker (#149)
* refactor: store

* feat: add schema json

* fix: setLayout

* fix: methods for external use

* feat: add slider and menu

* fix: fix filter

* fix: merge error

* fix: export get computation

* feat: add code export & import

* fix: add fold Fields

* fix: error panels

* fix: props

* fix: config desc

* fix: change layout not to fire computation

--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -155,10 +155,10 @@
     },
     "main": {
         "tablist": {
-            "new": "+ 新規ビュー",
-            "auto_title": "ビュー {{idx}}",
+            "new": "+ 新規作成",
+            "auto_title": "グラフ {{idx}}",
             "chart_name": "グラフ名",
-            "remove_confirm": "このグラフを削除してもよろしいですか？"            
+            "remove_confirm": "このグラフを削除してもよろしいですか？"
         },
         "askviz": {
             "placeholder": "データセットから描画したい視覚化は何ですか？"
