feat: add toolbar button for painter

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -199,7 +199,8 @@
                     "export_chart": "Export",
                     "export_chart_as": "Export as {{type}}",
                     "export_code": "Export Code",
-                    "geojson": "Geography Configuration"
+                    "geojson": "Geography Configuration",
+                    "painter": "Open Painter"
                 },
                 "limit": "Limit",
                 "size": "Resize",
