--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -199,7 +199,8 @@
                     "export_chart": "导出",
                     "export_chart_as": "导出 {{type}}",
                     "export_code": "导出代码",
-                    "geojson": "地理信息配置"
+                    "geojson": "地理信息配置",
+                    "painter": "打开数据绘板"
                 },
                 "limit": "上限",
                 "size": "调整尺寸",
