--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -29,6 +29,7 @@
         "row_count": "行数",
         "mea_key": "度量名称",
         "mea_val": "度量值",
+        "paint_key": "绘制字段",
         "analytic_type": {
             "dimension": "维度",
             "measure": "度量"
