--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -29,7 +29,7 @@
         "row_count": "行数",
         "mea_key": "名",
         "mea_val": "値",
-        "paint_key": "キャンバス値",
+        "paint_key": "キャンバスでのフィールド",
         "analytic_type": {
             "dimension": "ディメンション",
             "measure": "メジャー"
@@ -196,6 +196,16 @@
                     "export_code": "コードをエクスポート",
                     "geojson": "地理情報設定",
                     "painter": "データキャンバスを開く"
+                },
+                "paint": {
+                    "palette": "パレット",
+                    "color": "色",
+                    "label": "ラベル",
+                    "brush_size": "ブラシサイズ",
+                    "save_paint": "キャンバスを保存",
+                    "reset_paint": "キャンバスをリセット",
+                    "cancel": "キャンセル",
+                    "delete_paint": "キャンバスを削除"
                 },
                 "limit": "上限",
                 "size": "サイズ変更",
