--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -203,6 +203,16 @@
                     "geojson": "地理信息配置",
                     "painter": "打开数据绘板"
                 },
+                "paint": {
+                    "palette": "色板",
+                    "color": "颜色",
+                    "label": "标签",
+                    "brush_size": "笔刷大小",
+                    "save_paint": "保存画板",
+                    "reset_paint": "重置画板",
+                    "cancel": "取消改动",
+                    "delete_paint": "删除画板"
+                },
                 "limit": "上限",
                 "size": "调整尺寸",
                 "size_setting": {
