--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -205,6 +205,7 @@
                 },
                 "paint": {
                     "palette": "Palette",
+                    "eraser": "Eraser",
                     "color": "Brush Color",
                     "label": "Brush Label",
                     "brush_size": "Brush Size",
