--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -199,6 +199,7 @@
                 },
                 "paint": {
                     "palette": "パレット",
+                    "eraser": "消しゴム",
                     "color": "色",
                     "label": "ラベル",
                     "brush_size": "ブラシサイズ",
