feat: data board

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -125,7 +125,8 @@
     },
     "App": {
         "labels": {
-            "data_interpretation": "Interpret Data"
+            "data_interpretation": "Interpret Data",
+            "data_view": "View Data"
         },
         "segments": {
             "vis": "Visualization",
