feat: filter with agg Warning: This feature requires Computation support multi view.

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -227,6 +227,7 @@
         "editing": "Filter Rule Settings",
         "form": {
             "name": "Field",
+            "aggregation": "Aggregation",
             "rule": "Rule"
         },
         "header": {
