--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -22,7 +22,8 @@
         "misc": "其他",
         "formatGuidesDocs": "格式指南",
         "readHere": "阅读此处",
-        "svg": "使用SVG"
+        "svg": "使用SVG",
+        "customTile": "使用自定义的地图区块"
     },
     "constant": {
         "row_count": "行数",
